# over-there-update

./: Cargo.toml  README.md  main.tf  main_uma.rs  plugin_1.0.0 1.wasm  plugin_1.0.0.wasm  plugin_1.0.1 1.wasm  plugin_2.0.0.wasm  plugin_3.0.0.wasm
ota-server/: README.md  go.mod  main1.go
otaserver/: README.md  README_RUN.md  curltest.md  five_blink_update_check_download.sh  five_blink_updatecheck.sh  five_blink_updatedownload.sh  go.mod  main.go  one_blink_update_check_download.sh  one_blink_updatecheck.sh  one_blink_updatedownload.sh  test.md  update_check_download.sh  updatecheck.sh  updatedownload.sh
otaserver/ota_files/: five-second-delay.wasm  obfuscate_1.2.0.wasm  one-second-delay_1.1.0.wasm  plugin_1.0.0.wasm  plugin_2.0.0.wasm  uppercase_1.0.0.wasm
