[package]
name = "embedded-host"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.79"
embedded-hal = "1.0.0"
gpio-cdev = "0.6.0"
linux-embedded-hal = "0.4.0"
wasmtime = { version = "18.0.1", features = ["component-model"] }
serde_json = "1.0.64"
async-std = "1.9.0"
md5 = "0.7.0"
reqwest = { version = "0.11.6", features = ["blocking"] }